sonarqube fixes and test coverage